# harness-governance

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GLOSSARY.md  HELP.md  LICENSE  QUICKSTART.md  README.md  package.json  plan.md  pyproject.toml  upgrade.md  剩余整改项.md
.agents/: subagent-demo.py  tiers.json  tiers.template.json
.github/workflows/: ci.yml  publish.yml
.opencode/: tiers.json
.trae/documents/: subagent-progress-monitoring.md
adr-writing/: SKILL.md
agent-mistake-guard/: SKILL.md
agent-role-isolation/: SKILL.md
architecture-boundary-design/: SKILL.md
autonomous-ready-loop/: SKILL.md
autonomous-ready-loop/references/: runner-contract.md
brainstorm-to-brief/: SKILL.md
code-quality-drift-guard/: SKILL.md
codebase-orientation/: SKILL.md
contract-first-development/: SKILL.md
contract-first-development/references/: tdd-contract-cycle.md
contract-growth-control/: SKILL.md
debugging-checklist/: SKILL.md
doc-comment-policy/: SKILL.md
docs/: upgrade-archive.md
docs/adr/: agent-directory-declarations.md  capability-tier-gate-enforcement.md  governance-ux-friction-reduction.md  layer-wizard-confirm-edit-skip-back.md  layer-wizard-json-handoff.md  native-subagent-handoff-core-boundary.md  review-close-state-linkage.md  state-contract-p1.md  subagent-separation-gate.md  user-evidence-artifact-scanning.md
docs/architecture/: capability-tier-routing.md  executor-native-subagent-handoff.md  governance-ux-friction-reduction.md  layer-wizard-agent-choice-handoff.md  layer-wizard-confirm-edit-skip-back.md  review-close-state-linkage.md  state-contract-p1.md  subagent-separation-gate.md  user-evidence-artifact-scanning.md
docs/audits/: cc-ds审计.md  cc-gpt审计.md  cc-gpt审计2.md  codex-gpt审计.md  opencode-gpt审计.md
docs/brainstorming/: capability-tier-next-steps.md  executor-native-subagent-handoff.md  governance-ux-friction-reduction.md  layer-wizard-confirm-edit-skip-back.md  review-close-state-linkage.md  subagent-separation-gate.md  user-evidence-artifact-scanning.md
docs/briefs/: capability-tier-routing.md  executor-native-subagent-handoff.md  governance-ux-friction-reduction.md  layer-wizard-agent-choice-handoff.md  layer-wizard-confirm-edit-skip-back.md  review-close-state-linkage.md  spec-quick-design.md  state-contract-p1.md  (+2 more)
document-gardener/: SKILL.md
execution-prompt-authoring/: SKILL.md
find-docs/: SKILL.md
governed-implementation-entry/: SKILL.md
harness-engineering/: SKILL.md
harness-status-dashboard/: SKILL.md
harness-visualization/: SKILL.md
implementation-detail-timing/: SKILL.md
implementation-readiness-gate/: SKILL.md
observable-fact-discovery/: SKILL.md
planning-with-files/: SKILL.md
review-next-governance/: SKILL.md
scripts/: reviewer-native-handoff.ps1
skills/cline/: SKILL.md
tests/: STATE_CONTRACTS.md  VERIFICATION_CONTRACTS.md  __init__.py  conftest.py  test_cache.py  test_cli.py  test_logging.py  test_messages.py  test_models.py  test_native_subagent_handoff.py  test_parity_legacy.py  test_priority.py  test_runner.py  test_session_catchup.py  test_skill_versions.py  test_state_contract_scaffold.py
(+306 files in other folders)
