[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-governance"
version = "0.1.0"
description = "AI engineering governance CLI: 12-layer state machine + Markdown file conventions + change packets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "fan" }]
keywords = ["ai", "governance", "engineering", "state-machine", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
harness = "harness_governance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"harness_governance.data" = ["templates/*.md", "references/*.md", "fixtures/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"